--- a/index.qmd
+++ b/index.qmd
@@ -14,7 +14,7 @@ Also, Lauren turns into a cyborg...
 
 ## Resources
 
-[Group 3 Notes](https://docs.google.com/document/d/1pwQjENZ7vvaONNoqZ1YW-1qE-QGNw14vVcMjAWRTqbQ/edit#heading=h.vsg4onhlh4b1)
+[Google Drive for Workshop](https://drive.google.com/drive/folders/1NUO9QrKFMvd9RfXbHLSLyFjlETcjfczQ)
 
 ## **Brainstorming Session 1:** SADM Challenge 1 - Situational Awareness
 
